--- a/ImageView/WebContent/css/uploadify.css
+++ b/ImageView/WebContent/css/uploadify.css
@@ -58,7 +58,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	margin-bottom: 1em;
 }
 .uploadify-queue-item {
-	background-color: #F5F5F5;
+	background-color: #444444;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
@@ -68,7 +68,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	padding: 10px;
 }
 .uploadify-error {
-	background-color: #FDE5DD !important;
+	background-color: #444444 !important;
 }
 .uploadify-queue-item .cancel a {
 	background: url('../images/uploadify-cancel.png') 0 0 no-repeat;
